# sppark

./: .gitignore  .gitmodules  CMakeLists.txt
depends/blst/src/: blst_t.hpp
ec/: xyzz_t.hpp
ff/: alt1024.hpp  alt1024_constants.cu  alt2048.hpp  alt2048_constants.cu  alt4096.hpp  alt4096_constants.cu  alt6144.hpp  alt6144_constants.cu  alt8192.hpp  alt8192_constants.cu  alt_bn128.hpp  alt_bn128_constants.cu  bls12-377.hpp  bls12-377_constants.cu  bls12-381.hpp  bls12-381_constants.cu  ff_sppark.cuh  mont_t.cuh  param.cuh  pow.hpp  tensor.cuh
test/: CMakeLists.txt  main.cu
util/: exception.hpp
